// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createReactor should query 1`] = `
<div>
  Loading Parser...
</div>
`;

exports[`createReactor should query 2`] = `
<div>
  Fetching canister...
</div>
`;

exports[`createReactor should query 3`] = `
<div>
  Fetching canister...
</div>
`;

exports[`createReactor should query 4`] = `
<div>
  <button
    onClick={[Function]}
  >
    Get Version
  </button>
  <span>
    Ready To call
  </span>
</div>
`;

exports[`createReactor should query 5`] = `
<div>
  <button
    onClick={[Function]}
  >
    Get Version
  </button>
  <span>
    Internet Computer
  </span>
</div>
`;
